Yandex Algorithms Trainings/1.0/readme.md
# Решения с комментариями к [тренировкам по алгоритмам 1.0 от Яндекса](https://yandex.ru/yaintern/algorithm-training_1)

## Содержимое:

Полностью решенные тренировки 1.0. К каждому решению в файле .py есть комментарии и объяснения.

- :white_check_mark: [10/10] [Домашнее задание #1 "Сложность, тестирование, особые случаи"](Lesson_1_(Complexity,_testing,_special_cases)/)
- :white_check_mark: [10/10] [Домашнее задание #2 "Линейный поиск"](Lesson 2 (Linear search)/)
- :white_check_mark: [10/10] [Домашнее задание #3 "Множества"](Lesson 3 (Sets)/)
- :white_check_mark: [10/10] [Домашнее задание #4 "Словари и сортировка подсчётом"](Lesson 4 (Dictionaries and counting sort)/)
- :white_check_mark: [10/10] [Домашнее задание #5 "Префиксные суммы и два указателя"](Lesson 5 (Prefix sums and two pointers)/)
- :white_check_mark: [11/11] [Домашнее задание #6 "Бинарный поиск"](Lesson 6 (Binary search)/)
- :white_check_mark: [10/10] [Домашнее задание #7 "Сортировка событий"](Lesson 7 (Sorting events)/)
- :white_check_mark: [10/10] [Домашнее задание #8 "Деревья"](Lesson 8 (Trees)/)


---
## Ссылки на лекции и ДЗ

<table>
<tr>
  <th>№</th>
  <th>Название лекции</th>
  <th>Домашнее задание</th>
</tr> 

<tr>
  <td>1</td>
  <td><a href = "https://www.youtube.com/watch?v=QLhqYNsPIVo">«Сложность, тестирование, особые случаи»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/27393/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 1</a></td>
</tr>

<tr>
  <td>2</td>
  <td><a href = "https://www.youtube.com/watch?v=SKwB41FrGgU">«Линейный поиск»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/27472/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 2</a></td>
</tr>

<tr>
  <td>3</td>
  <td><a href = "https://www.youtube.com/watch?v=PUpmV2ieIHA">«Множества»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/27663/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 3</a></td>
</tr>

<tr>
  <td>4</td>
  <td><a href = "https://www.youtube.com/watch?v=Nb5mW1yWVSs">«Словари и сортировка подсчётом»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/27665/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 4</a></td>
</tr>

<tr>
  <td>5</td>
  <td><a href = "https://www.youtube.com/watch?v=de28y8Dcvkg">«Префиксные суммы и два указателя»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/27794/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 5</a></td>
</tr>

<tr>
  <td>6</td>
  <td><a href = "https://www.youtube.com/watch?v=YENpZexHfuk">«Бинарный поиск»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/27844/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 6</a></td>
</tr>

<tr>
  <td>7</td>
  <td><a href = "https://www.youtube.com/watch?v=hGixDBO-p6Q">«Сортировка событий»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/27883/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 7</a></td>
</tr>

<tr>
  <td>8</td>
  <td><a href = "https://www.youtube.com/watch?v=lEJzqHgyels">«Деревья»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/28069/enter/?utm_campaign=training4&utm_content=reminder&utm_medium=email&utm_source=mindbox">Домашнее задание по лекции 8</a></td>
</tr>

</table>

---
