Yandex Algorithms Trainings/2.0/readme.md
# Решения с комментариями к [тренировкам по алгоритмам 2.0 от Яндекса](https://yandex.ru/yaintern/algorithm-training_2)

## Содержимое:

Полностью решенные тренировки 2.0. К каждому решению в файле .py есть комментарии и объяснения.

- :white_check_mark: [10/10] [Домашнее задание #1 "Сложность, тестирование, особые случаи"](Lesson_1_(Complexity,_testing,_special_cases)/)
    - :white_check_mark: [5/5] [Division A](Lesson_1_(Complexity,_testing,_special_cases)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_1_(Complexity,_testing,_special_cases)/B/)
- :white_check_mark: [10/10] [Домашнее задание #2 "Линейный поиск"](Lesson_2_(Linear_search)/)
    - :white_check_mark: [5/5] [Division A](Lesson_2_(Linear_search)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_2_(Linear_search)/B/)
- :white_check_mark: [10/10] [Домашнее задание #3 "Множества"](Lesson_3_(Sets)/)
    - :white_check_mark: [5/5] [Division A](Lesson_3_(Sets)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_3_(Sets)/B/)
- :white_check_mark: [10/10] [Домашнее задание #4 "Словари и сортировка подсчётом"](Lesson_4_(Dictionaries_and_counting_sort)/)
    - :white_check_mark: [5/5] [Division A](Lesson_4_(Dictionaries_and_counting_sort)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_4_(Dictionaries_and_counting_sort)/B/)
- :negative_squared_cross_mark: [9/10] [Домашнее задание #5 "Префиксные суммы и два указателя"](Lesson_5_(Prefix_sums_and_two_pointers)/)
    - :negative_squared_cross_mark: [4/5] [Division A](Lesson_5_(Prefix_sums_and_two_pointers)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_5_(Prefix_sums_and_two_pointers)/B/)
- :white_check_mark: [10/10] [Домашнее задание #6 "Бинарный поиск"](Lesson_6_(Binary_search)/)
    - :white_check_mark: [5/5] [Division A](Lesson_6_(Binary_search)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_6_(Binary_search)/B/)
- :white_check_mark: [10/10] [Домашнее задание #7 "Сортировка событий"](Lesson_7_(Sorting_events)/)
    - :white_check_mark: [5/5] [Division A](Lesson_7_(Sorting_events)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_7_(Sorting_events)/B/)
- :white_check_mark: [10/10] [Домашнее задание #8 "Деревья"](Lesson_8_(Trees)/)
    - :white_check_mark: [5/5] [Division A](Lesson_8_(Trees)/A/)
    - :white_check_mark: [5/5] [Division B](Lesson_8_(Trees)/B/)


---
## Ссылки на лекции и ДЗ

<table>
<tr>
  <th>№</th>
  <th>Название лекции</th>
  <th>Домашнее задание</th>
</tr> 

<tr>
  <td>1</td>
  <td><a href = "https://www.youtube.com/watch?v=QLhqYNsPIVo">«Сложность, тестирование, особые случаи»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/28724/enter/">Домашнее задание по лекции 1, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/28730/enter/">Домашнее задание по лекции 1, Дивизион B</a></td>
</tr>

<tr>
  <td>2</td>
  <td><a href = "https://www.youtube.com/watch?v=SKwB41FrGgU">«Линейный поиск»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/28736/enter/">Домашнее задание по лекции 2, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/28738/enter/">Домашнее задание по лекции 2, Дивизион B</a></td>
</tr>

<tr>
  <td>3</td>
  <td><a href = "https://www.youtube.com/watch?v=PUpmV2ieIHA">«Множества»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/28963/enter/">Домашнее задание по лекции 3, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/28964/enter/">Домашнее задание по лекции 3, Дивизион B</a></td>
</tr>

<tr>
  <td>4</td>
  <td><a href = "https://www.youtube.com/watch?v=Nb5mW1yWVSs">«Словари и сортировка подсчётом»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/28969/enter/">Домашнее задание по лекции 4, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/28970/enter/">Домашнее задание по лекции 4, Дивизион B</a></td>
</tr>

<tr>
  <td>5</td>
  <td><a href = "https://www.youtube.com/watch?v=de28y8Dcvkg">«Префиксные суммы и два указателя»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/29072/enter/">Домашнее задание по лекции 5, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/29075/enter/">Домашнее задание по лекции 5, Дивизион B</a></td>
</tr>

<tr>
  <td>6</td>
  <td><a href = "https://www.youtube.com/watch?v=YENpZexHfuk">«Бинарный поиск»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/29189/enter/">Домашнее задание по лекции 6, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/29188/enter/">Домашнее задание по лекции 6, Дивизион B</a></td>
</tr>

<tr>
  <td>7</td>
  <td><a href = "https://www.youtube.com/watch?v=hGixDBO-p6Q">«Сортировка событий»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/29401/enter/">Домашнее задание по лекции 7, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/29396/enter/">Домашнее задание по лекции 7, Дивизион B</a></td>
</tr>

<tr>
  <td>8</td>
  <td><a href = "https://www.youtube.com/watch?v=lEJzqHgyels">«Деревья»</a></td>
  <td><a href = "https://contest.yandex.ru/contest/29405/enter/">Домашнее задание по лекции 8, Дивизион A</a><br>
  <a href = "https://contest.yandex.ru/contest/29403/enter/">Домашнее задание по лекции 8, Дивизион B</a></td>
</tr>

</table>

---
